# Mini-LLM-Systems

./: .gitignore  CS336-学习指南.md  README.md  UPSTREAM.md
assignment1-basics/: .gitignore  pyproject.toml  实验报告.md
assignment1-basics/cs336_basics/: bpe.py  decoding.py  model.py  nn_utils.py  optimizer.py  tokenizer.py  tokenizer_io.py
assignment1-basics/scripts/: encode_dataset.py  generate.py  lb_lr_sweep.sh  lb_lr_sweep2.sh  lb_lr_sweep3.sh  plot_curves.py  run_ablations.sh  tokenizer_experiments.py  train.py  train_bpe.py
assignment1-basics/tests/: adapters.py
assignment2-systems/: .gitignore  pyproject.toml  实验报告.md
assignment2-systems/cs336_systems/: benchmark.py  ddp.py  flash_attention.py  fsdp.py  model_configs.py  nvtx_attention.py  sharded_optimizer.py
assignment2-systems/scripts/: bench_allreduce.py  bench_ddp.py  bench_flash.py  bench_fsdp.py  bench_pytorch_attention.py  bench_sharded_optimizer.py  build_timing_tables.py  gradient_checkpointing.py  inspect_snapshot.py  leaderboard.py  mixed_precision_accumulation.py  mixed_precision_dtypes.py  run_benchmarks.sh  run_ddp_benchmarks.sh  run_memory_profile.sh  run_nsys.sh  run_nsys_segmented.sh  saved_tensors_block.py
assignment2-systems/tests/: adapters.py
assignment5-alignment/: .gitignore  pyproject.toml  实验报告.md
assignment5-alignment/cs336_alignment/: gsm8k.py  vllm_utils.py
assignment5-alignment/scripts/: eval_gsm8k.py  run_olmo1b_experiment_suite.sh  run_qwen7b_experiment_suite.sh  train_grpo_gsm8k.py
assignment5-alignment/tests/: adapters.py
